Implement forgot and reset password and read the public private keys from file